# pyZohoAPI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  bumpytrack.toml  commands.md  pyproject.toml  run-me-interactively.py
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
docs/: conf.py  index.md  quickstart.md  requirements.txt
docs/contrib/: code_ref.md  coding.md  contributing.md  index.md  setup.md
docs/objrefs/: index.md  methods.md  types.md
docs/snippets/: seealso-zoho-api.markdown  todo-future-release.markdown
docs/userguide/: apiobject.md  exceptions.md  index.md  logging.md  zohoobject.md
pyzohoapi/: REFACTOR-ME.py  __init__.py  books.py  inventory.py  subscriptions.py
pyzohoapi/core/: __init__.py  collection.py  utils.py
pyzohoapi/exceptions/: __init__.py
pyzohoapi/objecttypes/: __init__.py
pyzohoapi/objecttypes/mixins/: CompositeItemOps.py  CustomFields.py  __init__.py
tests/: __init__.py  test_00_pyzohoapi.py  test_core_first.py  test_inventory.py  test_inventory_currency.py  test_inventory_pricelist.py  test_inventory_purchasereceive.py  test_inventory_setcustomfield.py
tests/inventory/: test_inventory.py  test_inventory_compositeitems.py  test_inventory_itemadjustments.py  test_inventory_itemtransfer.py
tools/: interactive-test-server.css  interactive-test-server.html  interactive-test-server.js  interactive-test-server.py  test-shell.py
tools/serverfiles/: interactive-test-server.css  interactive-test-server.html  interactive-test-server.js
