[tool.poetry]
name = "pyZohoAPI"
version = "0.1.0"
description = "Pythonic access to Zoho APIs in the Finance Plus suite."
authors = ["Todd Esposito <todd@toddesposito.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
dotted = "^0.1.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
furo = "^2020.12.30-beta.24"
sphinx = "^3.4.3"
myst-parser = "^0.13.3"
sphinx-autobuild = "^2020.9.1"
sphinx-copybutton = "^0.3.1"

[tool.bumpytrack]
current_version = "0.1.0"
git_commit = true
git_tag = true

[[tool.bumpytrack.file_replaces]]
path = "setup.py"
search_template = "version=\"{version}\""

[[tool.bumpytrack.file_replaces]]
path = "docs/conf.py"
search_template = "release = '{version}'"

[[tool.bumpytrack.file_replaces]]
path = "pyzohoapi/__init__.py"
search_template = "__version__ = '{version}'"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
