[tool.poetry]
name = "pyZohoAPI"
version = "0.2.3"
description = "Pythonic access to Zoho APIs in the Finance Plus suite."
authors = ["Todd Esposito <todd@toddesposito.com>"]
license = "MIT"
readme = "README.md"
include = ["LICENSE"]
homepage = "https://github.com/tdesposito/pyZohoAPI"
repository = "https://github.com/tdesposito/pyZohoAPI"
documentation = "https://pyzohoapi.readthedocs.io/en/latest/"
keywords = [
  "api",
  "zoho api",
  "zoho books",
  "zoho inventory",
  "zoho",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
furo = "^2020.12.30-beta.24"
sphinx = "^3.4.3"
myst-parser = "^0.13.3"
sphinx-autobuild = "^2020.9.1"
sphinx-copybutton = "^0.3.1"

[tool.bumpytrack]
current_version = "0.2.3"
git_commit = true
git_tag = true

# [[tool.bumpytrack.file_replaces]]
# path = "pyproject.toml"
# search_template = "version = \"{version}\""

[[tool.bumpytrack.file_replaces]]
path = "docs/conf.py"
search_template = "release = '{version}'"

[[tool.bumpytrack.file_replaces]]
path = "pyzohoapi/__init__.py"
search_template = "__version__ = '{version}'"

[[tool.bumpytrack.file_replaces]]
path = "README.md"
search_template = "## pyZohoAPI (v{version})"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
