[tool.poetry]
name = "pyZohoAPI"
version = "0.10.0"
description = "Pythonic access to Zoho APIs in the Finance Plus suite."
authors = ["Todd Esposito <todd@toddesposito.com>"]
license = "MIT"
readme = "README.md"
include = ["LICENSE"]
homepage = "https://github.com/tdesposito/pyZohoAPI"
repository = "https://github.com/tdesposito/pyZohoAPI"
documentation = "https://pyzohoapi.readthedocs.io/en/latest/"
keywords = [
  "api",
  "zoho api",
  "zoho books",
  "zoho inventory",
  "zoho",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
simplejson = "^3.17.5"

[tool.poetry.dev-dependencies]
furo = "^2020.12.30-beta.24"
sphinx = "^3.4.3"
myst-parser = "^0.13.3"
sphinx-autobuild = "^2020.9.1"
sphinx-copybutton = "^0.3.1"
pytest = "^6.2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
